<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogoutHelperActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5B9E5B"
            app:title="Logout Helper"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#ffffff">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_sure_you_are_connected_to_the_wifi_from_which_you_want_to_logout"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvGhostel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/g_hostel"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#880000"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvChostel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_hostel"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#008800"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>